static/css/base.css
@import url(../materialize/css/materialize.css);

@font-face { font-family: LoveloBold; src: url(Lovelo-LineBold.otf); }
@font-face { font-family: LoveloLight; src: url(Lovelo-LineLight.ttf); }

html
{
  height: 100%;
  background-repeat: no-repeat;
}

body
{
  height: 100%;
  animation-name: backgroundColorPalette;
  background-blend-mode: multiply;
  animation-duration: 5s;
  animation-iteration-count: infinite;
  animation-direction: alternate;
  animation-timing-function: linear;
}

@keyframes backgroundColorPalette
{
  0% { background: #ff9891 url('admin_background.jpg'); background-repeat: no-repeat; background-size: 100% 100%; background-attachment: fixed; }
  50% { background: #7fc5ff url('admin_background.jpg'); background-repeat: no-repeat; background-size: 100% 100%; background-attachment: fixed; }
  100% { background: #ff9891 url('admin_background.jpg'); background-repeat: no-repeat; background-size: 100% 100%; background-attachment: fixed; }
}

nav
{
  height: 100px;
  line-height: 100px;
}

.errormsg
{
  color: red;
}

.content
{
  min-height: 100%;
}

.wide-container
{
  padding-top: 20px;
  padding-left: 100px;
  padding-right: 100px;
}

.glow-text
{
  text-shadow: 0px 0px 5px cyan;
  font-weight: bold;
}

.glow-title
{
  background-color: cyan;
  color: white;
  font-weight: bold;
  pointer-events: none;
  box-shadow: 2px 2px 20px cyan;
}

.unglow
{
  -webkit-text-fill-color: white;
}

.glow-gradient
{
  font-weight: bold;
  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	-webkit-animation: hue 5s infinite linear;
  text-shadow: 0px 0px 8px orange;
}

.glow-gradient-box
{
  font-weight: bold;
  background-image: -webkit-linear-gradient(92deg, #f35626, #feab3a);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	-webkit-animation: hue 5s infinite linear;
  text-shadow: 0px 0px 8px orange;
  box-shadow: 0px 2px 5px orange;
}

@-webkit-keyframes hue {
  from {
    -webkit-filter: hue-rotate(0deg);
  }
  to {
    -webkit-filter: hue-rotate(360deg);
  }
}

